added git commands

--- a/index.html
+++ b/index.html
@@ -7,5 +7,21 @@
 </head>
 <body>
     <h2>Welcom to my website</h2>
+    <h3>…or create a new repository on the command line</h3>
+    <code>
+        echo "# my-website" >> README.md
+        git init
+        git add README.md
+        git commit -m "first commit"
+        git branch -M main
+        git remote add origin https://github.com/AtharShihab/my-website.git
+        git push -u origin main
+    </code>
+    <h3>for existing repos..</h3>
+    <code>
+        git add . //to add all changes to commit
+        git commit -m "added git commands" //commiting added file
+        git push //to push all commited files
+    </code>
 </body>
 </html>
