added git commands 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h3>for existing repos..</h3>
     <code>
         git add . //to add all changes to commit
-        git commit -m "added git commands" //commiting added file
+        git commit -m "commit name" //commiting added file
         git push //to push all commited files
     </code>
 </body>
