--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <h2>Welcom to my website</h2>
     <h3>…or create a new repository on the command line</h3>
     <code>
-        echo "# my-website" >> README.md
-        git init
-        git add README.md
-        git commit -m "first commit"
-        git branch -M main
-        git remote add origin https://github.com/AtharShihab/my-website.git
-        git push -u origin main
+        <p>echo "# my-website" >> README.md</p>
+        <p>git init</p>
+        <p>git add README.md</p>
+        <p>git commit -m "first commit"</p>
+        <p>git branch -M main</p>
+        <p>git remote add origin https://github.com/AtharShihab/my-website.git</p>
+        <p>git push -u origin main</p>
     </code>
     <h3>for existing repos..</h3>
     <code>
-        git add . //to add all changes to commit
-        git commit -m "commit name" //commiting added file
-        git push //to push all commited files
+        <p>git add . //to add all changes to commit</p>
+        <p>git commit -m "commit name" //commiting added file</p>
+        <p>git push //to push all commited files</p>
     </code>
 </body>
 </html>
