--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>Welcom to my website</h2>
-    <h3>…or create a new repository on the command line</h3>
-    <code>
+    <div>
+      <h3>…or create a new repository on the command line</h3>
+      <code>
         <p>echo "# my-website" >> README.md</p>
         <p>git init</p>
         <p>git add README.md</p>
         <p>git commit -m "first commit"</p>
         <p>git branch -M main</p>
-        <p>git remote add origin https://github.com/AtharShihab/my-website.git</p>
+        <p>
+          git remote add origin https://github.com/AtharShihab/my-website.git
+        </p>
         <p>git push -u origin main</p>
-    </code>
-    <h3>for existing repos..</h3>
-    <code>
+      </code>
+    </div>
+    <div>
+      <h3>for existing repos..</h3>
+      <code>
         <p>git add . //to add all changes to commit</p>
         <p>git commit -m "commit name" //commiting added file</p>
         <p>git push //to push all commited files</p>
-    </code>
-</body>
+      </code>
+    </div>
+    <p>this line added in the second branch</p>
+  </body>
 </html>
